# medical_text_classifier

./: Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
dataset/: labels.csv  train_labels.csv
medical_text_classifier/: prediction.py  pretreatment.py  train.py
